--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
-  text-align: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #142F58; /* 142F58 */
+    /* background: linear-gradient(
+        90deg, 
+        rgba(26, 35, 126, 0.75) 7.816818036237189%,
+        rgba(25, 36, 127, 0.75) 7.816818036237189%,
+        rgba(13, 71, 161, 0.75) 20.343448309388727%,
+        rgba(26, 35, 126, 0.75) 35.56812202598829%,
+        rgba(13, 71, 161, 0.75) 54.454426130124446%,
+        rgba(26, 35, 126, 0.75) 72.56986067898976%,
+        rgba(13, 71, 161, 0.75) 86.25279528504757%,
+        rgba(26, 35, 126, 0.75) 100.32116466874083%
+    ), #000; */
+    /* backdrop-filter: blur(30px) brightness(60%); */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red-highlighter {
+    background-color: #b71c1c;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.white-highlighter {
+    background-color: #fff2;
 }
